--- a/Application/VysiChart/src/vysichart/GraphicalUserInterface.form
+++ b/Application/VysiChart/src/vysichart/GraphicalUserInterface.form
@@ -164,6 +164,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="View Task Info"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="viewTaskInfoActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
